open POTD on startup and update

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,7 +10,8 @@
     <section class = "section">
         <div class="container">
             <h1 class="title">LeetMeAlone</h1>
-            <label class="label">OH hey there.</label>
+            <label class="label">Time to do you daily Leetcode.</label>
+            <label class="label"></label>
         </div>
     </section>
 </body>
