--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LeetMeAlone</title>
     <link rel="stylesheet" href="bulma.min.css"/>
+    
+
 </head>
 <body>
     <section class = "section">
         <div class="container">
             <h1 class="title">LeetMeAlone</h1>
-            <label class="label">Time to do you daily Leetcode.</label>
-            <label class="label"></label>
+            <h2 class="title is-size-5">Time to do your daily Leetcode.</h2>
+            <label class="label" id="daily-problem-title"></label>
+            <span class="tag" id="daily-problem-difficulty"></span>
+
         </div>
     </section>
+    <script src="popup.js"></script>
 </body>
 </html>
