emergency stop, checks if problem solved

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -16,6 +16,11 @@
             <label class="label" id="daily-problem-title"></label>
             <span class="tag" id="daily-problem-difficulty"></span>
 
+            <div class="mt-4">
+                <button id="toggleEnforcement" class="button is-fullwidth is-danger">
+                    Loading...
+                </button>
+            </div>
         </div>
     </section>
     <script src="popup.js"></script>
